--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Web Page</title>
-    <link rel="stylesheet" href="styles.css">
-<Body>
-    <h1  style="color: blue;">Hello, World!</h1>
-</Body>
+    <link rel="stylesheet" href="styles.css" />
+    <style>
+      body {
+        background-color: lightgreen;
+      }
+      p {
+        font-size: 20;
+      }
+    </style>
+  </head>
+  <body>
+    <h1 style="color: blue">Hello, World!</h1>
+  </body>
 </html>
